test/invalid/InvalidDotSyntax/InvalidDotSyntax.plume
/**
 * Invalid Syntax with dot operator
 * Compiles into error.
 *   
 * @author fc41625@alunos.fc.ul.pt F‡bio Botelho 
 * @version $id$ 
 *
 */
 
 class   InvalidDotSyntax extends Object is 
 	
 	method foo : () -> String is
 		//The space is valid. The second dot is invalid 
 		new Object() . .toString())  
 		 